[package]
name = "tracing-appender-plus"
version = "0.2.5"
authors = [
    "Zeki Sherif <zekshi@amazon.com>",
    "Tokio Contributors <team@tokio.rs>",
    "4lkaid <4lkaid@gmail.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/4lkaid/tracing-appender"
homepage = "https://github.com/4lkaid/tracing-appender"
description = "Sync with tracing-appender and support rolling with local time"
categories = ["development-tools::debugging", "asynchronous"]
keywords = ["logging", "tracing", "file-appender", "non-blocking-writer"]
edition = "2018"
rust-version = "1.63.0"

[features]
default = []
local-time = ["time/local-offset"]

[dependencies]
crossbeam-channel = "0.5"
time = { version = "0.3", default-features = false, features = [
    "formatting",
    "parsing",
] }
parking_lot = { optional = true, version = "0.12" }
thiserror = "2"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["fmt", "std"]

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
tracing = "0.1"
tempfile = "3"

[[bench]]
name = "bench"
harness = false
